--- a/Jobs-company/index.html
+++ b/Jobs-company/index.html
@@ -1,32 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-  <header>
-    <section class="title-image">
-      <img src="" alt="">
-      <h1>Título top</h1>
-    </section>
-    <section>
-      <form action="" method="get">
-        <label for="job"><input type="text" name="job" placeholder="job"></label>
-        <label for="job">
-          <select  name="job" placeholder="level">
-            <option value="Junior">Junior</option>
-            <option value="Pleno">Pleno</option>
-            <option value="Senior">Senior</option>
+  </head>
+
+  <body>
+    <header>
+      <div>PROCURAR EMPREGO</div>
+      <section class="form-header">
+        <div>
+          <label for="">Tipo de Vaga</label>
+          <div>
+            <input class='form-header-option input-job' type="text" name="what" id="what" placeholder="emprego, função, cargo...">
+          </div>
+        </div>
+        <div>
+          <label for="">País</label>
+          <div>
+            <select class='form-header-option input-location' name="country" id="">
+              <option value="br">Brasil</option>
+              <option value="gb">Gran Bretanha</option>
             </select>
-          </label>
-        <button type="submit">Submit</button>
-      </form>
-    </section>
-  </header>
-  <script src="./script.js"></script>
-</body>
+          </div>
+        </div>
+        <div>
+          <button class='form-header-option btn-submit' type="submit">ENVIAR/SUBMIT</button>
+          <button class='form-header-option btn-avanced'>SIMBOLO</button>
+        </div>
+      </section>
+    </header>
+    <main>
+      <div class="results">
+        
+      </div>
+    </main>
+    <script src="./script.js"></script>
+  </body>
 </html>
+
+
+
+
+
+<!-- <section class="title-image">
+  <img src="" alt="" />
+  <h1>Título top</h1>
+</section>
+<section class="section-form">
+  <form action="" method="get">
+    <div>
+      <label for="job"
+        ><input type="text" name="job" placeholder="job"
+      /></label>
+    </div>
+    <label for="job">
+      <select name="job" placeholder="level">
+        <option value="Junior">Junior</option>
+        <option value="Pleno">Pleno</option>
+        <option value="Senior">Senior</option>
+      </select>
+    </label>
+    <label for="job"
+      ><input type="text" name="job" placeholder="job"
+    /></label>
+    <label for="job">
+      <select name="job" placeholder="level">
+        <option value="Junior">Junior</option>
+        <option value="Pleno">Pleno</option>
+        <option value="Senior">Senior</option>
+      </select>
+    </label>
+    <button type="submit">Submit</button>
+  </form>
+</section> -->
