--- a/Jobs-company/index.html
+++ b/Jobs-company/index.html
@@ -35,45 +35,12 @@
     </header>
     <main>
       <div class="results">
+
+      </div>
+      <div class='selected-job'>
         
       </div>
     </main>
     <script src="./script.js"></script>
   </body>
 </html>
-
-
-
-
-
-<!-- <section class="title-image">
-  <img src="" alt="" />
-  <h1>Título top</h1>
-</section>
-<section class="section-form">
-  <form action="" method="get">
-    <div>
-      <label for="job"
-        ><input type="text" name="job" placeholder="job"
-      /></label>
-    </div>
-    <label for="job">
-      <select name="job" placeholder="level">
-        <option value="Junior">Junior</option>
-        <option value="Pleno">Pleno</option>
-        <option value="Senior">Senior</option>
-      </select>
-    </label>
-    <label for="job"
-      ><input type="text" name="job" placeholder="job"
-    /></label>
-    <label for="job">
-      <select name="job" placeholder="level">
-        <option value="Junior">Junior</option>
-        <option value="Pleno">Pleno</option>
-        <option value="Senior">Senior</option>
-      </select>
-    </label>
-    <button type="submit">Submit</button>
-  </form>
-</section> -->
