Atualiza menu de paises

--- a/Jobs-company/index.html
+++ b/Jobs-company/index.html
@@ -23,7 +23,13 @@
           <div>
             <select class='form-header-option input-location' name="country" id="">
               <option value="br">Brasil</option>
-              <option value="gb">Gran Bretanha</option>
+              <option value="gb">Grã-Bretanha</option>
+              <option value="de">Alemanha</option>
+              <option value="ca">Canadá</option>
+              <option value="us">Estados Unidos</option>
+              <option value="au">Austrália</option>
+              <option value="fr">França</option>
+              <option value="ru">Rússia</option>
             </select>
           </div>
         </div>
