--- a/Jobs-company/index.html
+++ b/Jobs-company/index.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
     />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
 
@@ -22,86 +22,119 @@
   </head>
 
   <body>
-    <header>
-      <!-- <img src="./icons8-money-circulation-100.png" alt="icon-target"> -->
-      <img src="./images/icons8-info-64.png" alt="header-icon" />
-      <section class="form-header">
-        <div>
-          <label for="input-job">Tipo de Vaga:</label>
+    <div class="background-img">
+      <header>
+        <img src="./images/icons8-info-64.png" alt="header-icon" />
+        <form class="form-header form-group">
           <div>
-            <input
-              class="form-header-option input-job"
-              type="text"
-              name="what"
-              id="what"
-              placeholder="emprego, função, cargo..."
-            />
+            <label for="input-job">Tipo de Vaga:</label>
+            <div>
+              <input
+                class="form-header-option input-job form-control"
+                type="text"
+                name="what"
+                id="what"
+                placeholder="emprego, função, cargo..."
+              />
+            </div>
           </div>
-        </div>
-        <div>
-          <label for="">País:</label>
           <div>
-            <select
-              class="form-header-option input-location"
-              name="country"
-              id=""
+            <label for="">País:</label>
+            <div>
+              <select
+                class="
+                  form-header-option
+                  input-location
+                  form-select form-select-sm
+                "
+                name="country"
+                id=""
+              >
+                <option value="br">Brasil</option>
+                <option value="gb">Grã-Bretanha</option>
+                <option value="de">Alemanha</option>
+                <option value="ca">Canadá</option>
+                <option value="us">Estados Unidos</option>
+                <option value="au">Austrália</option>
+                <option value="fr">França</option>
+                <option value="ru">Rússia</option>
+              </select>
+            </div>
+          </div>
+          <div>
+            <label for="">Número de Ofertas:</label>
+            <div>
+              <input
+                class="form-control"
+                type="number"
+                name="number"
+                id="input-number"
+                placeholder="50"
+                max="50"
+                min="1"
+              />
+            </div>
+          </div>
+          <div class="div-btn">
+            <button
+              class="form-header-option btn-submit btn btn-success"
+              type="submit"
             >
-              <option value="br">Brasil</option>
-              <option value="gb">Grã-Bretanha</option>
-              <option value="de">Alemanha</option>
-              <option value="ca">Canadá</option>
-              <option value="us">Estados Unidos</option>
-              <option value="au">Austrália</option>
-              <option value="fr">França</option>
-              <option value="ru">Rússia</option>
-            </select>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-search"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                />
+              </svg>
+              Buscar
+            </button>
           </div>
-        </div>
-        <div>
-          <label for="">Número de Ofertas:</label>
-          <div>
-            <input
-              type="number"
-              name="number"
-              id="input-number"
-              placeholder="50"
-              max="50"
-              min="1"
-            />
-          </div>
-        </div>
-        <div class='div-btn'>
-          <button class="form-header-option btn-submit btn btn-success" type="submit">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-            </svg>
-            Buscar 
-          </button>
-        </div>
-      </section>
-    </header>
-    <main>
-      <div class="loading">Loading...</div>
-      <div class="results"></div>
-    </main>
-    <div class="modal fade" id='job-modal' tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content ">
-          <div class="modal-header">
-            <h3 class="modal-title">Modal title</h3>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="company pop-up-style"></div>
-            <div class="category pop-up-style"></div>
-            <div class="location pop-up-style"></div>
-            <div class="contract-time pop-up-style"></div>
-            <div class="description pop-up-style"></div>
-            <div class="salary-min pop-up-style"></div>
-            <div class="salary-max pop-up-style"></div>
-          </div>
-          <div class="modal-footer">
-            &copyCopyright: <a href="https://www.adzuna.com.br/" target="_blank">Adzuna</a>
+        </form>
+      </header>
+      <main>
+        <div class="loading">Loading...</div>
+        <div class="results"></div>
+      </main>
+      <div
+        class="modal fade"
+        id="job-modal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h3 class="modal-title">Modal title</h3>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="company pop-up-style"></div>
+              <div class="category pop-up-style"></div>
+              <div class="location pop-up-style"></div>
+              <div class="contract-time pop-up-style"></div>
+              <div class="description pop-up-style"></div>
+              <div class="salary-min pop-up-style"></div>
+              <div class="salary-max pop-up-style"></div>
+              <a class="redirect-url-modal pop-up-style" href="" target="_blank"
+                >Acessar vaga</a
+              >
+            </div>
+            <div class="modal-footer">
+              &copyCopyright:
+              <a href="https://www.adzuna.com.br/" target="_blank">Adzuna</a>
+            </div>
           </div>
         </div>
       </div>
